--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,26 @@
+alembic==1.0.10
 certifi==2019.3.9
 chardet==3.0.4
 Click==7.0
 configobj==5.0.6
 Flask==1.0.2
+Flask-Migrate==2.4.0
+Flask-SQLAlchemy==2.4.0
 gitdb2==2.0.5
 GitPython==2.1.11
 gunicorn==19.9.0
 idna==2.8
 itsdangerous==1.1.0
 Jinja2==2.10.1
+Mako==1.0.9
 MarkupSafe==1.1.1
+python-dateutil==2.8.0
+python-editor==1.0.4
+q==2.6
 repo==0.1.0
 requests==2.21.0
 six==1.12.0
 smmap2==2.0.5
+SQLAlchemy==1.3.3
 urllib3==1.24.3
 Werkzeug==0.15.2
