--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,9 @@ certifi==2019.3.9
 chardet==3.0.4
 Click==7.0
 configobj==5.0.6
+dominate==2.3.5
 Flask==1.0.2
+Flask-Bootstrap4==4.0.2
 Flask-Migrate==2.4.0
 Flask-SQLAlchemy==2.4.0
 gitdb2==2.0.5
@@ -23,4 +25,5 @@ six==1.12.0
 smmap2==2.0.5
 SQLAlchemy==1.3.3
 urllib3==1.24.3
+visitor==0.1.3
 Werkzeug==0.15.2
