--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ Flask==1.0.2
 Flask-Bootstrap4==4.0.2
 Flask-Migrate==2.4.0
 Flask-SQLAlchemy==2.4.0
+Flask-WTF==0.14.2
 gitdb2==2.0.5
 GitPython==2.1.11
 gunicorn==19.9.0
@@ -27,3 +28,4 @@ SQLAlchemy==1.3.3
 urllib3==1.24.3
 visitor==0.1.3
 Werkzeug==0.15.2
+WTForms==2.2.1
