--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ configobj==5.0.6
 dominate==2.3.5
 Flask==1.0.2
 Flask-Bootstrap4==4.0.2
+Flask-Login==0.4.1
 Flask-Migrate==2.4.0
 Flask-SQLAlchemy==2.4.0
 Flask-WTF==0.14.2
